[gd_scene load_steps=37 format=3 uid="uid://da81cp8j448wv"]

[ext_resource type="Script" uid="uid://023d4wi55lt4" path="res://ui/mode_controller/mode_controller.gd" id="1_abku6"]
[ext_resource type="Texture2D" uid="uid://b4j3w7qpbmtuj" path="res://resources/icons/clear_icon.png" id="1_ho4gg"]
[ext_resource type="Texture2D" uid="uid://oitqjwhnc6e7" path="res://resources/icons/paint_icon.png" id="2_2o6pb"]
[ext_resource type="Texture2D" uid="uid://bflwvyf02ftuv" path="res://resources/icons/paint_rect_icon.png" id="3_kf1h2"]
[ext_resource type="Texture2D" uid="uid://cf2qu7kd2ps63" path="res://resources/icons/bucket_icon.png" id="3_qri2x"]
[ext_resource type="Texture2D" uid="uid://c6mon70wvso7o" path="res://resources/icons/edit_point_icon.png" id="4_345ks"]
[ext_resource type="Texture2D" uid="uid://dhtm7760o8rtn" path="res://resources/icons/tile_icon.png" id="5_kcjrc"]
[ext_resource type="Texture2D" uid="uid://dnmh2fdchypqf" path="res://resources/icons/bound_icon.png" id="5_vy005"]
[ext_resource type="Texture2D" uid="uid://b3fnrkka8imdn" path="res://resources/icons/fence_icon.png" id="6_3qg6s"]
[ext_resource type="Texture2D" uid="uid://j3wl65trax4h" path="res://resources/icons/wall_icon.png" id="6_8ii6c"]
[ext_resource type="Texture2D" uid="uid://jgt24ovklh1h" path="res://resources/icons/eraser_icon.png" id="6_vgurn"]
[ext_resource type="Texture2D" uid="uid://c8h8qwmwxsrbo" path="res://resources/icons/barrier_icon.png" id="7_88rql"]
[ext_resource type="Texture2D" uid="uid://b1e1eujkhkv8p" path="res://resources/icons/sun_icon.png" id="7_h5nnx"]
[ext_resource type="Texture2D" uid="uid://584hhx2ad4" path="res://resources/icons/box_icon.png" id="8_lge2m"]
[ext_resource type="Texture2D" uid="uid://efd2bft5skkj" path="res://resources/icons/prop_icon.png" id="9_1cxrr"]
[ext_resource type="Texture2D" uid="uid://bp276hk63ujyh" path="res://resources/icons/point_light_icon.png" id="9_v4b77"]
[ext_resource type="Texture2D" uid="uid://bjjnyqep02lgb" path="res://resources/icons/area_icon.png" id="10_dtixj"]
[ext_resource type="Texture2D" uid="uid://o0w65dsng3rt" path="res://resources/icons/entities_white_icon.png" id="10_kmroa"]
[ext_resource type="Texture2D" uid="uid://xgyokyqeo75t" path="res://resources/icons/entity_3d_icon.png" id="10_o80du"]
[ext_resource type="Texture2D" uid="uid://byo3s6dwt4tu7" path="res://resources/icons/entity_2d_icon.png" id="11_ehnmh"]
[ext_resource type="Texture2D" uid="uid://dxl3vlk2otudf" path="res://resources/icons/prop_3d_icon.png" id="12_cloxs"]
[ext_resource type="Texture2D" uid="uid://c1s4tcys5lfme" path="res://resources/icons/flip_icon.png" id="13_1ju8h"]
[ext_resource type="Texture2D" uid="uid://dt6nak73i6afg" path="res://resources/icons/decal_icon.png" id="13_aieav"]
[ext_resource type="Texture2D" uid="uid://c4nteiqsun2ui" path="res://resources/icons/cut_icon.png" id="13_hpqhh"]
[ext_resource type="Texture2D" uid="uid://jyxcyp17m0mt" path="res://resources/icons/passage_icon.png" id="17_0fr0p"]
[ext_resource type="Texture2D" uid="uid://ddo02qovt2ukm" path="res://resources/icons/move_icon.png" id="17_qct3b"]
[ext_resource type="Texture2D" uid="uid://1b7cvgs3dip3" path="res://resources/icons/copy_icon.png" id="21_2msfg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0eybk"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.0431373, 0.0470588, 0.0470588, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_6c6o5"]
allow_unpress = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc5mm"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.0431373, 0.0470588, 0.0470588, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_nyg8b"]

[sub_resource type="ButtonGroup" id="ButtonGroup_p7v7q"]

[sub_resource type="ButtonGroup" id="ButtonGroup_4wjwj"]

[sub_resource type="ButtonGroup" id="ButtonGroup_alxa2"]
allow_unpress = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sqvpp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7hgs"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.752)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
shadow_size = 4
shadow_offset = Vector2(0, 2)

[node name="ModeController" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_abku6")

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="C2" type="MarginContainer" parent="V"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="V/C2"]
layout_mode = 2

[node name="C" type="PanelContainer" parent="V/C2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0eybk")

[node name="Modes" type="HBoxContainer" parent="V/C2/HBoxContainer/C"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="GroundButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Ground Editing"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("5_kcjrc")

[node name="WallButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Wall Buildind"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("6_8ii6c")

[node name="WallEditButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Wall Editing"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("4_345ks")

[node name="LightButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create Light"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("7_h5nnx")

[node name="EntityButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create Entity"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("10_kmroa")

[node name="PropButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create Prop"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("9_1cxrr")

[node name="AreaButton" type="Button" parent="V/C2/HBoxContainer/C/Modes"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create Area"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_6c6o5")
icon = ExtResource("10_dtixj")

[node name="C" type="MarginContainer" parent="V"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 12

[node name="H" type="HBoxContainer" parent="V/C"]
layout_mode = 2

[node name="ModifiersButtons" type="PanelContainer" parent="V/C/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xc5mm")

[node name="FlippedButton" type="Button" parent="V/C/H/ModifiersButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(Shift + F) Reverve Mode"
focus_mode = 0
toggle_mode = true
icon = ExtResource("13_1ju8h")

[node name="ModesOptions" type="PanelContainer" parent="V/C/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xc5mm")

[node name="V" type="VBoxContainer" parent="V/C/H/ModesOptions"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="GroundOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="PaintTileButton" type="Button" parent="V/C/H/ModesOptions/V/GroundOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(Q) Paint"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("2_2o6pb")

[node name="RectButton" type="Button" parent="V/C/H/ModesOptions/V/GroundOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(W) Rect"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("3_kf1h2")

[node name="BucketButton" type="Button" parent="V/C/H/ModesOptions/V/GroundOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(E) Bucket"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("3_qri2x")

[node name="EraseButton" type="Button" parent="V/C/H/ModesOptions/V/GroundOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "(R) Replace"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("6_vgurn")

[node name="WallOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="BoundButton" type="Button" parent="V/C/H/ModesOptions/V/WallOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Bound"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_p7v7q")
icon = ExtResource("5_vy005")

[node name="FenceButton" type="Button" parent="V/C/H/ModesOptions/V/WallOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fence"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_p7v7q")
icon = ExtResource("6_3qg6s")

[node name="BarrierButton" type="Button" parent="V/C/H/ModesOptions/V/WallOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Barrier"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_p7v7q")
icon = ExtResource("7_88rql")

[node name="BoxButton" type="Button" parent="V/C/H/ModesOptions/V/WallOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Box"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_p7v7q")
icon = ExtResource("8_lge2m")

[node name="PassageButton" type="Button" parent="V/C/H/ModesOptions/V/WallOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Barrier"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_p7v7q")
icon = ExtResource("17_0fr0p")

[node name="WallEditOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="SelectWallButton" type="Button" parent="V/C/H/ModesOptions/V/WallEditOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select and edit"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("17_qct3b")

[node name="ReverseWallButton" type="Button" parent="V/C/H/ModesOptions/V/WallEditOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Change"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("13_1ju8h")

[node name="ChangeWallButton" type="Button" parent="V/C/H/ModesOptions/V/WallEditOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Change"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("21_2msfg")

[node name="PaintWallButton" type="Button" parent="V/C/H/ModesOptions/V/WallEditOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Paint Wall"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("1_ho4gg")

[node name="CutWallButton" type="Button" parent="V/C/H/ModesOptions/V/WallEditOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Cut Wall"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_nyg8b")
icon = ExtResource("13_hpqhh")

[node name="LightOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="OmniLightButton" type="Button" parent="V/C/H/ModesOptions/V/LightOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Omni Light"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_4wjwj")
icon = ExtResource("9_v4b77")

[node name="EntityOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Entity3DButton" type="Button" parent="V/C/H/ModesOptions/V/EntityOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Entity 3D"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_alxa2")
icon = ExtResource("10_o80du")

[node name="BillboardButton" type="Button" parent="V/C/H/ModesOptions/V/EntityOptions"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Billboard"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_alxa2")
icon = ExtResource("11_ehnmh")

[node name="PropOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Prop3DButton" type="Button" parent="V/C/H/ModesOptions/V/PropOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Prop 3D"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_alxa2")
icon = ExtResource("12_cloxs")

[node name="DecalButton" type="Button" parent="V/C/H/ModesOptions/V/PropOptions"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Decal"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_alxa2")
icon = ExtResource("13_aieav")

[node name="AreaOptions" type="HBoxContainer" parent="V/C/H/ModesOptions/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="C3" type="MarginContainer" parent="V"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 24

[node name="ModeHint" type="PanelContainer" parent="V/C3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sqvpp")

[node name="ModeLabel" type="Label" parent="V/C3/ModeHint"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_o7hgs")
text = "Mode"
